added pom.xml